<resources>
    <string name="app_name">KosKosan Admin</string>
    <string name="title_home">Home</string>
    <string name="action_sign_in_short">Sign in with Phone</string>
    <string name="welcome">"Welcome!"</string>
    <string name="alert_login_cancel">Login cancel!</string>
    <string name="alert_check_internet_connection">Check Internet Connection!</string>
    <string name="default_code_country" translatable="false">ID</string>
    <string name="alert_camera_permission_denied">Camera Permission Denied!</string>
    <string name="alert_camera_permission_available">Camera Permission Available</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="alert_camera_access_required">Camera Access Required</string>
    <string name="alert_camera_permission_not_available">Camera Permission not Available</string>
    <string name="alert_camera_permission_granted">Camera Permission Granted</string>
    <string name="choose_image">Choose Image</string>
    <string name="complete_your_profile">Complete Your Profile</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="email">E-Mail</string>
    <string name="phone">Phone</string>
    <string name="phone_number_warning">You can\'t edit phone number</string>
    <string name="save">Save</string>
    <string name="alert_read_external_storage_required">Read External Storage Required</string>
    <string name="alert_storage_permission_not_available">Read External Storage Permission not available</string>
    <string name="alert_storage_permission_granted">Storage Permission Granted!</string>
    <string name="alert_storage_permission_denied">Storage Permission Denied!</string>
    <string name="alert_photo_null">Your Photo Profile It\'s Blank</string>
    <string name="data_error_null">Something wrong!, it\'s null</string>
    <string name="title_profile">Profile</string>
    <string name="image_requirement_size_description">We strongly recommend using images taken from the gallery and measuring less than 1 MB.</string>
    <string name="about">About this app</string>
    <string name="about_description">KosKosan is an application to help find the location of the nearest boarding house from your location point.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="title_transaction">Transaction</string>
    <string name="alert_cancel_edit_profile">Cancel Edit Profile ?</string>
    <string name="location_name">Location Name</string>
    <string name="location_address">Location Address</string>
    <string name="location_phone">Location Phone</string>
    <string name="location_type">Location Type</string>
    <string name="location_distance">Location Distance</string>
    <string name="km">KM</string>
    <string name="strip">-</string>
    <string name="share">Share</string>
    <string name="order">Order</string>
    <string name="detail">Location Detail</string>
    <string name="share_content_base">\"Hei, Share this location from KosKosan App : \"</string>
    <string name="type_of">"Type of : "</string>
    <string name="woman">Woman</string>
    <string name="man">Man</string>
    <string name="title_search">Search</string>
    <string name="transaction_date" translatable="false">30/03/2021</string>
    <string name="transaction_by">Transaction by</string>
    <string name="transaction_from">Transaction From</string>
    <string name="transaction_status">Transaction Status</string>
    <string name="cancel_status">Canceled</string>
    <string name="accept_status">Accepted</string>
    <string name="survey_status">Survey Location</string>
    <string name="waiting_status">Waiting to owner response</string>
    <string name="survey_schedule_date">Survey Schedule Date</string>
    <string name="rent_start_date">Rent Start Date</string>
    <string name="rent_stop_date">Rent Stop Date</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="user_name">User Name</string>
    <string name="failed_load_photo_camera">Failed load photo from camera</string>
    <string name="created_order_at">Created order at :</string>
    <string name="ordered_by">Ordered by :</string>
    <string name="order_boarding_house_at">Order a boarding house at :</string>
    <string name="approximate_distance">Approximate distance from your location :</string>
    <string name="call_admin_contact">Contact admin for details</string>
    <string name="detail_transaction_title">Detail Transaction</string>
    <string name="order_status">"Order Status : "</string>
    <string name="customer_data">Customer Data :</string>
    <string name="location_data">"Location Data : "</string>
    <string name="title_location">Location</string>
    <string name="error_upload_message">"Your image size must be lower than 6 Mb or "</string>
    <string name="change_order_status">Change Order Status</string>
    <string name="mix">Mix</string>
    <string name="edit_location">Edit Location</string>
    <string name="google_place_url">Google Place URL</string>
    <string name="other">Other</string>
    <string name="location_coordinate">Location Coordinate</string>
    <string name="add_new_location">Add New Location</string>
    <string name="alert_cancel_add_new_location">Cancel Add New Location ?</string>
    <string name="alert_location_mark_null">Select your location mark on map</string>
    <string name="alert_type_of_location_null">Select type of location</string>
</resources>