<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_location_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.form.add.location.AddLocationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_add_location"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:fitsSystemWindows="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_add_location"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/add_location_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_edt_location_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:boxBackgroundColor="@color/material_on_primary_emphasis_high_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_edt_location_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_location_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location_phone"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_choose_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/choose_image"
                app:layout_constraintEnd_toEndOf="@+id/anim_camera"
                app:layout_constraintStart_toStartOf="@+id/anim_camera"
                app:layout_constraintTop_toBottomOf="@+id/anim_camera" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_edt_location_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:boxBackgroundColor="@color/material_on_primary_emphasis_high_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_choose_image">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_location_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location_name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_edt_location_google_place"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:boxBackgroundColor="@color/material_on_primary_emphasis_high_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_edt_location_phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_location_google_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/google_place_url"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/anim_camera"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/camera" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_edt_location_address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:boxBackgroundColor="@color/material_on_primary_emphasis_high_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_edt_location_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_location_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location_address"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_title_location_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/location_type"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_edt_location_google_place"
                tools:text="@string/location_type" />

            <RadioGroup
                android:id="@+id/radio_group_location_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_location_type">

                <RadioButton
                    android:id="@+id/radio_button_location_type_man"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/man"
                    android:textColor="@android:color/black"
                    tools:text="@string/man" />

                <RadioButton
                    android:id="@+id/radio_button_location_type_woman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/woman"
                    android:textColor="@android:color/black"
                    tools:text="@string/woman" />

                <RadioButton
                    android:id="@+id/radio_button_location_type_mix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mix"
                    android:textColor="@android:color/black"
                    tools:text="@string/mix" />

                <RadioButton
                    android:id="@+id/radio_button_location_type_other"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:textColor="@android:color/black"
                    tools:text="@string/other" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_title_select_location_coordinate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/location_coordinate"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_group_location_type"
                tools:text="@string/location_coordinate" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_location_map"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_select_location_coordinate">

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mv_location_map"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/save"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_location_map" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/anim_sending"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        app:layout_anchor="@+id/add_location_scroll_view"
        app:layout_anchorGravity="center"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/sending" />

    <FrameLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>